# hate-speech-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  AQ.Ab8RN6K-UN2UoNjWHrjIPHwe1DMyT5XG7izOFtEA_CeAwE4RkQ  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
configs/: distilbert_davidson.yaml  distilbert_davidson_3way.yaml  distilbert_hatexplain.yaml  distilbert_hatexplain_3way.yaml  doc2vec_davidson.yaml  doc2vec_davidson_3way.yaml  doc2vec_hatexplain.yaml  doc2vec_hatexplain_3way.yaml  gemini_davidson_fewshot.yaml  gemini_davidson_zeroshot.yaml  gemini_hatexplain_fewshot.yaml  gemini_hatexplain_zeroshot.yaml  tfidf_davidson.yaml  tfidf_davidson_3way.yaml  tfidf_hatexplain.yaml  tfidf_hatexplain_3way.yaml
data/llm_cache/: gemini_davidson_fewshot.jsonl  gemini_davidson_zeroshot.jsonl  gemini_hatexplain_fewshot.jsonl  gemini_hatexplain_zeroshot.jsonl
docs/: research_notes.md
paper/: Makefile  _build_debug.html  build_pdf.py  cover.html  main.md  main.tex  references.bib  theme.css
paper/tables/: adversarial.tex  cascade.tex  cross_dataset.tex  inference_cost.tex  llm_results.tex  multi_seed.tex  results.md  results.tex  (+3 more)
results/: adversarial_eval.json  adversarial_eval.md  cascade_sweep.json  cascade_sweep.md  inference_cost.json  inference_cost.md  llm_results.md  multi_seed.json  multi_seed.md  results.md  results_3way.md  target_group_analysis.json  target_group_analysis.md  threshold_tuning.json  threshold_tuning.md
scripts/: adversarial_eval.py  cascade_sweep.py  cross_dataset_eval.py  inference_cost.py  make_3way_table.py  make_llm_table.py  make_results_table.py  multi_seed_aggregate.py  run_multi_seed.sh  target_group_analysis.py  threshold_sweep.py
tests/: test_cascade.py  test_evaluate.py  test_models.py  test_preprocess.py
(+13 files in other folders)
