[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsd"
version = "0.1.0"
description = "Hate Speech Detection: TF-IDF, Doc2Vec, and DistilBERT benchmarked on Davidson & HateXplain"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shahnawaz Khan", email = "shahnawaz.jrw@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "gensim>=4.3",
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.29",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
    "regex>=2024.4",
    "emoji>=2.10",
    "requests>=2.31",
    "wandb>=0.16",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.3",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pre-commit>=3.7",
]

[project.scripts]
hsd-train = "hsd.train:main"
hsd-prepare = "hsd.data.prepare:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
